DuPont DevSB/src/objects/pse__Assignment__c.object
<CustomObject>
    <fields>
        <fullName>pse__Override_Timecard_Cost_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Group to which this Assignment&apos;s Timecard Cost Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.  Note that either way, the Timecard Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Group to which this Assignment&apos;s Timecard Cost Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Timecard Cost Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Timecard Cost Group For Assignments</relationshipLabel>
        <relationshipName>Override_TC_CostGroup_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Cost_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Practice to which this Assignment&apos;s Timecard Cost Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.  Note that either way, the Timecard Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Practice to which this Assignment&apos;s Timecard Cost Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Timecard Cost Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Timecard Cost Practice For Assignments</relationshipLabel>
        <relationshipName>Override_TC_CostPractice_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Cost_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Region to which this Assignment&apos;s Timecard Cost Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.  Note that either way, the Timecard Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Region to which this Assignment&apos;s Timecard Cost Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Timecard Cost Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Timecard Cost Region For Assignments</relationshipLabel>
        <relationshipName>Override_TC_CostRegion_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Revenue_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Group to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.  Note that either way, the Timecard Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Group to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Timecard Revenue Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Timecard Revenue Group For Assignments</relationshipLabel>
        <relationshipName>Override_TC_RevGroup_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Revenue_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Practice to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.  Note that either way, the Timecard Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Practice to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Timecard Revenue Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Timecard Revenue Practice For Assignments</relationshipLabel>
        <relationshipName>Override_TC_RevPractice_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Revenue_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Region to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.  Note that either way, the Timecard Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Region to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Timecard Revenue Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Timecard Revenue Region For Assignments</relationshipLabel>
        <relationshipName>Override_TC_RevRegion_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Allocated__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Percent Allocated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Bill_Rate__c</fullName>
        <inlineHelpText>This field is the bill rate used during the planning activities for an assignment to assess potential value. It is mainly used for fixed price projects where the actual bill rate is 0</inlineHelpText>
        <label>Planned Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>User editable number of hours originally planned for this assignment. NOTE: this field is user maintained and will not be updated automatically.</description>
        <inlineHelpText>The number of hours originally planned for this assignment. This value is independent of the actual number of hours scheduled.</inlineHelpText>
        <label>Planned Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Revenue__c</fullName>
        <description>Planned Hours * Bill Rate</description>
        <formula>pse__Planned_Hours__c * pse__Bill_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Planned Hours * Bill Rate</inlineHelpText>
        <label>Planned Revenue (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Project_Task_Hours__c</fullName>
        <inlineHelpText>The total number of project task hours entered for timecards against this Assignment. Do not manually edit this field.</inlineHelpText>
        <label>Project Task Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Projected_Revenue__c</fullName>
        <label>Projected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Card</label>
        <referenceTo>pse__Rate_Card__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Cost_Rate_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Resource Cost Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Resource Request Lookup populated only when assignment is created from a resource request.</description>
        <label>Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Mgr</fullName>
                </value>
                <value>
                    <fullName>Account Mgr Principal</fullName>
                </value>
                <value>
                    <fullName>Account Mgr Senior</fullName>
                </value>
                <value>
                    <fullName>BDM</fullName>
                </value>
                <value>
                    <fullName>BDM JUNIOR</fullName>
                </value>
                <value>
                    <fullName>BDM PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>BDM Senior</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT ASSOCIATE</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT SENIOR</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT TRAINER</fullName>
                </value>
                <value>
                    <fullName>L&amp;D - Production</fullName>
                </value>
                <value>
                    <fullName>L&amp;D - Production Leader</fullName>
                </value>
                <value>
                    <fullName>Market/ Regional Leader</fullName>
                </value>
                <value>
                    <fullName>Other - Business Functions</fullName>
                </value>
                <value>
                    <fullName>Practice Leader</fullName>
                </value>
                <value>
                    <fullName>Practice SME</fullName>
                </value>
                <value>
                    <fullName>PROJECT CONTROLLER</fullName>
                </value>
                <value>
                    <fullName>PROJECT LEADER</fullName>
                </value>
                <value>
                    <fullName>PROJECT LEADER PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>PROJECT LEADER SENIOR</fullName>
                </value>
                <value>
                    <fullName>PROJECT SUPPORT</fullName>
                </value>
                <value>
                    <fullName>SCHEDULER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Schedule_Updated__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Schedule Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>pse__Schedule__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Days__c</fullName>
        <formula>pse__Schedule__r.pse__Scheduled_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Hours__c</fullName>
        <formula>pse__Schedule__r.pse__Scheduled_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Show_Assignment_Methodologies_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Methodology field on the Time Entry page and Expense Entry page only lists assignment methodologies. When true, only assignment methodologies are shown. When false, the methodologies that belong to the project to which the assignment relates are shown. The default value is false.</description>
        <inlineHelpText>Indicates whether the Methodology field on the Time Entry page and Expense Entry page only lists assignment methodologies. When true, only assignment methodologies are shown. When false, the methodologies that belong to the related project are shown.</inlineHelpText>
        <label>Show Assignment Methodologies Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Assignment_Milestones_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Milestone field on the Time Entry page and Expense Entry page only lists assignment milestones. When true, only assignment milestones are shown. When false, the milestones that belong to the project to which the assignment relates are shown. The default value is false.</description>
        <inlineHelpText>Indicates whether the Milestone field on the Time Entry page and Expense Entry page only lists assignment milestones. When true, only assignment milestones are shown. When false, the milestones that belong to the project are shown.</inlineHelpText>
        <label>Show Assignment Milestones Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Assignment_Phases_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Phase field on the Time Entry page and Expense Entry page only lists assignment phases. When true, only assignment phases are shown. When false, the phases that belong to the project to which the assignment relates are shown. The default value is false.</description>
        <inlineHelpText>Indicates whether the Phase field on the Time Entry page and Expense Entry page only lists assignment phases. When true, only assignment phases are shown. When false, the phases that belong to the project to which the assignment relates are shown.</inlineHelpText>
        <label>Show Assignment Phases Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <formula>pse__Schedule__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tentative</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate_Currency_Code__c</fullName>
        <label>Suggested Bill Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate_Number__c</fullName>
        <label>Suggested Bill Rate Number</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate__c</fullName>
        <formula>pse__Suggested_Bill_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(pse__Suggested_Bill_Rate_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Bill Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Time_Credited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked for non-billable Assignments for which hours are credited towards utilization.</description>
        <inlineHelpText>This checkbox should be checked for non-billable Assignments for which hours are credited towards utilization.</inlineHelpText>
        <label>Time Credited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Time_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked for non-billable assignments for which time should neither count for or against utilization.</description>
        <inlineHelpText>This checkbox should be checked for non-billable assignments for which time should neither count for or against utilization.</inlineHelpText>
        <label>Time Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_External_Costs_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard External Costs In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_External_Costs_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard External Costs Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Internal_Costs_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard Internal Costs In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Internal_Costs_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard Internal Costs Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Use_Project_Currency_For_Resource_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Project Currency For Resource Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Resource_Currency_For_Resource_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Resource Currency For Resource Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Resource_Default_Cost_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Resource Default Cost Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Resource_Default_Cost_Rate_as_Daily__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Resource Default Cost Rate as Daily</label>
        <type>Checkbox</type>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>Acquisition</fullName>
        <columns>NAME</columns>
        <columns>FF_PSA_Assignment_Type__c</columns>
        <columns>pse__Assignment_Number__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Start_Date__c</columns>
        <columns>pse__End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FF_PSA_Assignment_Type__c</field>
            <operation>contains</operation>
            <value>acquisition</value>
        </filters>
        <label>Acquisition</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__End_Date__c</columns>
        <columns>pse__Estimated_Time_To_Completion__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse__Is_Billable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>pse__Bill_Rate__c</field>
            <operation>equals</operation>
            <value>USD 0</value>
        </filters>
        <label>test</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__End_Date__c</columns>
        <columns>pse__Estimated_Time_To_Completion__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Milestone__c</columns>
        <columns>FF_PSA_ICDR_PO_No__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>FF_PSA_Expense_Limit_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR(AND(pse__Resource__r.pse__External_Resource__c ==false,OR(ISCHANGED(FF_PSA_Expense_Limit__c),ISCHANGED(FF_PSA_Transportation_Expense_Limit__c),ISCHANGED(FF_PSA_Lodging_Expense_Limit__c),ISCHANGED(FF_PSA_Premium_Expense_Limit__c
))),AND(NOT(CONTAINS( TEXT(FF_PSA_Assignment_Type__c),&apos;Work&apos;)), OR(ISCHANGED(FF_PSA_Expense_Limit__c),ISCHANGED(FF_PSA_Transportation_Expense_Limit__c),ISCHANGED(FF_PSA_Lodging_Expense_Limit__c),ISCHANGED(FF_PSA_Premium_Expense_Limit__c
)))),true,false)</errorConditionFormula>
        <errorMessage>Expense Limit is not required for this Assignment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FF_PSA_Opportunity_Assignment_Restrictio</fullName>
        <active>false</active>
        <errorConditionFormula>AND( pse__Resource_Request__r.FF_PSA_For_Project_Delivery__c = TRUE,  NOT (ispickval(pse__Project__r.pse__Stage__c,&apos;Project - Active&apos;)),NOT (ispickval(pse__Project__r.pse__Stage__c,&apos;Project - Client Signed&apos;)))</errorConditionFormula>
        <errorDisplayField>pse__Action_Refresh_EVA_Hours_From_Timecards__c</errorDisplayField>
        <errorMessage>Please assign the resources once the Opportunity reaches &apos;Close&apos; stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FF_PSA_PO_Expired_rule</fullName>
        <active>true</active>
        <description>Assignment record cannot be edited, once PO expired for the assignment</description>
        <errorConditionFormula>IF( AND(PRIORVALUE( FF_PSA_PO_Expired__c ) == true, $Profile.Name &lt;&gt; &apos;System Administrator&apos; ) , true, false)</errorConditionFormula>
        <errorMessage>You cannot edit this record because PO has been expired for this Assignment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FF_PSA_Resource_Replacement</fullName>
        <active>false</active>
        <errorConditionFormula>if(PRIORVALUE( pse__Resource__c ) != pse__Resource__c, if( pse__Resource__r.pse__External_Resource__c ==true,true,if( pse__Resource__r.pse__Region__c != pse__Project__r.pse__Region__c ,true,false)),false)</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>You can not replace the current resource with a FSE from other region or an ICDR</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FF_PSA_Restrict_Assignment_creation</fullName>
        <active>true</active>
        <description>Restrict Assignment Creation when when LE is missing in project</description>
        <errorConditionFormula>AND (ISNEW(),ISPICKVAL( pse__Project__r.FF_PSA_Billing_Legal_Entity__c , &quot;&quot;), ISPICKVAL( pse__Project__r.pse__Project_Type__c,&apos;Customer Project&apos;), pse__Resource__r.pse__External_Resource__c, ISPICKVAL(pse__Project__r.pse__Stage__c,&apos;Project - Draft&apos;), pse__Project__r.FF_PSA_Owning_Organization__c =&apos;DSS-Consulting&apos;)</errorConditionFormula>
        <errorMessage>Kindly fill the Billing Legal Entity in the Project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FF_PSA_Restrict_PM_BDM_Any_Assignment</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND( pse__Project__r.pse__Is_Billable__c==true ,OR($Profile.Name==&apos;FF PSA - Business Development Manager&apos;,$Profile.Name==&apos;FF PSA - Project Manager&apos;, $Permission.FF_PSA_Project_Manager, $Permission.FF_PSA_Business_Development_Manager),isnew()),true,false)</errorConditionFormula>
        <errorDisplayField>pse__Action_Refresh_EVA_Hours_From_Timecards__c</errorDisplayField>
        <errorMessage>BDM/PM are not allowed to Create Any Assignments on Active Project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FF_PSA_Restrict_PM_BDM_Creating_Delivery</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(Contains(TEXT(FF_PSA_Assignment_Type__c),&apos;Delivery&apos;),
OR($Profile.Name==&apos;FF PSA - Business Development Manager&apos;,$Profile.Name==&apos;FF PSA - Project Manager&apos;, $Permission.FF_PSA_Project_Manager, $Permission.FF_PSA_Business_Development_Manager ),isnew(),
NOT( ISBLANK(pse__Project__r.pse__Opportunity__c))
),true,false)</errorConditionFormula>
        <errorMessage>BDM/PM are not allowed to create Delivery Assignments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FF_PSA_Restrict_Schedular_Any_Assignment</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND($Profile.Name ==&quot;FF PSA - Scheduler&quot;,Contains(TEXT(FF_PSA_Assignment_Type__c),&apos;Delivery&apos;),AND(NOT(ISPICKVAL( pse__Project__r.pse__Stage__c ,&apos;Project - Client Signed&apos;)),NOT(ISPICKVAL( pse__Project__r.pse__Stage__c ,&apos;Project - Active&apos;)))),true,false)</errorConditionFormula>
        <errorMessage>The Contract isn&apos;t signed by the client yet. Please proceed with the assigning the resource once you receive the notification on signed contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_Currency_is_Constant</fullName>
        <active>true</active>
        <description>An Assignment&apos;s Currency field value may not be updated once set.</description>
        <errorConditionFormula>ISCHANGED(CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>An Assignment&apos;s Currency field value may not be updated once set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_May_Not_Be_Billable</fullName>
        <active>true</active>
        <description>An Assignment may only be marked &apos;Is Billable&apos; if it is for a Billable Project.</description>
        <errorConditionFormula>AND(pse__Is_Billable__c, NOT(ISNULL(pse__Project__c)), (pse__Project__c &lt;&gt; &apos;&apos;),  NOT(pse__Project__r.pse__Is_Billable__c))</errorConditionFormula>
        <errorDisplayField>pse__Is_Billable__c</errorDisplayField>
        <errorMessage>An Assignment may only be marked &apos;Is Billable&apos; if it is for a Billable Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_Project_is_Constant</fullName>
        <active>true</active>
        <description>An Assignment&apos;s Project field value may not be blank and may not be updated once set.</description>
        <errorConditionFormula>OR(ISNULL(pse__Project__c),LEN(pse__Project__c)=0,ISCHANGED(pse__Project__c))</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>An Assignment&apos;s Project field value may not be blank and may not be updated once set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_Resource_is_Constant</fullName>
        <active>false</active>
        <description>An Assignment&apos;s Resource field value can not be changed.</description>
        <errorConditionFormula>ISCHANGED(pse__Resource__c)</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>An Assignment&apos;s Resource field value can not be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_Resource_is_Required</fullName>
        <active>false</active>
        <description>An Assignment&apos;s Resource field value may not be blank.</description>
        <errorConditionFormula>ISBLANK(pse__Resource__c)</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>An Assignment&apos;s Resource field value may not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Bill_Rate_Required</fullName>
        <active>true</active>
        <description>This validation rule forces Bill Rate on Assignment to be required in effect, even if the Bill Rate field itself is eventually marked as NOT required to allow access limitations on it.</description>
        <errorConditionFormula>ISNULL(pse__Bill_Rate__c)</errorConditionFormula>
        <errorDisplayField>pse__Bill_Rate__c</errorDisplayField>
        <errorMessage>Assignment requires a Bill Rate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Billable_Assignments_may_not_be_Credited</fullName>
        <active>true</active>
        <description>Assignments may only be marked as &quot;Time Credited&quot; if they are Non-Billable.</description>
        <errorConditionFormula>AND(pse__Is_Billable__c,pse__Time_Credited__c)</errorConditionFormula>
        <errorDisplayField>pse__Time_Credited__c</errorDisplayField>
        <errorMessage>Assignments may only be marked as &quot;Time Credited&quot; if they are Non-Billable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Billable_Assignments_may_not_be_Excluded</fullName>
        <active>true</active>
        <description>Assignments may only be marked as &quot;Time Excluded&quot; if they are Non-Billable.</description>
        <errorConditionFormula>AND(pse__Is_Billable__c,pse__Time_Excluded__c)</errorConditionFormula>
        <errorDisplayField>pse__Time_Excluded__c</errorDisplayField>
        <errorMessage>Assignments may only be marked as &quot;Time Excluded&quot; if they are Non-Billable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Credited_Assignments_may_not_be_Excluded</fullName>
        <active>true</active>
        <description>Assignments may not be marked as &quot;Time Excluded&quot; if they are also marked as &quot;Time Credited&quot;.</description>
        <errorConditionFormula>AND(pse__Time_Credited__c,pse__Time_Excluded__c)</errorConditionFormula>
        <errorDisplayField>pse__Time_Excluded__c</errorDisplayField>
        <errorMessage>Assignments may not be marked as &quot;Time Excluded&quot; if they are also marked as &quot;Time Credited&quot;.</errorMessage>
    </validationRules>
</CustomObject>